提取通用工具；

--- a/Editor/NovaEditor.Common.asmdef
+++ b/Editor/NovaEditor.Common.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "NovaEditor.Common",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "NovaFramework.Common"
+    ],
     "includePlatforms": [
         "Editor"
     ],
